[gd_scene load_steps=2 format=3 uid="uid://cn1blgqopnkmy"]

[ext_resource type="Script" path="res://addons/jam_launch/ui/MessagePanel.gd" id="1_vyu1k"]

[node name="MessagePanel" type="MarginContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_vyu1k")

[node name="PC" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="PC"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HB" type="HBoxContainer" parent="PC/MC"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Message" type="RichTextLabel" parent="PC/MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "This is the message it aaaaaaaaaaaaa"
fit_content = true
scroll_active = false

[node name="VB" type="VBoxContainer" parent="PC/MC/HB"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Dismiss" type="Button" parent="PC/MC/HB/VB"]
layout_mode = 2
text = "Dismiss"

[node name="ProgressBar" type="ProgressBar" parent="PC/MC/HB/VB"]
layout_mode = 2
size_flags_vertical = 4
value = 50.0
show_percentage = false

[node name="DismissTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="PC/MC/HB/VB/Dismiss" to="." method="_on_dismiss_pressed"]
[connection signal="timeout" from="DismissTimer" to="." method="_on_dismiss_timer_timeout"]
